Board Scrollbar Fix
Fixed an issue where the scrollbars weren’t shown at the borders of the
browser.

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,9 @@ body > div#board {
 	white-space: nowrap; /* To prevent wrapping of inline-block */
 	overflow: scroll;
 	
+	width: 100%;
+	height: 100%;
+	
 	font-size:0px; /* The Hell? */
 	padding: 36px 44.75px;
 	margin:0px;
